CHANGES IN FLTK 1.1.10

	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
	- Added cast to Fl_Color in all Fluid code (STR #2206)
	- Fixed wrong identifier for special keys combined with 
	  modifier (STR #2196)
	- Fixed documentation for Fl_Progress (STR #2209)
	- Fix for multiple popups, when dragging and calling fl_alert()
	  and friends from the callback (STR #2159)
	- Avoiding crashes for recursive common dialogs (this does not 
	  fix the issue at hand yet) (STR 2150)
	- Fluid printing used wrong colors under Windows (STR #2195)
	- Fixed bad system menu hadling in OS X (STR #2153)
	- Fixed File Input mouse pointer dragging (STR #2181)
	- Updated the bundled libpng to v1.2.35 (released 18 Feb. 2009)
	- Added Fl_Scroll::bbox() documentation (STR #1893)
	- Fixed static linking of image libraries (STR #1962)
	- Fixed callback would not be called when shortcut was used with
          radio and toggle buttons in default FL_RELEASE mode.
	- Fixed a problem with TrackMouseEvent() (Windows only) that would
	  generate wrong FL_LEAVE events with subwindows. TrackMouseEvent
	  is now enabled by default (it was disabled for GNU compilers).
	  It can be disabled by defining NO_TRACK_MOUSE.
	  Improved test/subwindow.cxx (STR #2079)
	- Fixed RGB colors for round box (STR #2097)
	- Fixed documentation (added missing COMCTRL32.LIB dependency)
	- Fl_Group::clip_children() is now public (STR #2017)
	- Fixed first modifier key event (STR #1952)
	- Fixed wrong default value of Fl_Spinner in Fluid (STR #1991)
	- Fixed Fluid textcolor output (STR #1992)
	- Added clarification to Fl_GL_Window mode function (STR #1945)
	- Fl_Group and Fl_Scroll now resize themselves before
	  resizing their children (STR #2032)
	- Fixed adding an idle handler during a draw() call (STR #1950)
	- Improved stability of fl_read_image (STR #2021)
	- Fixed menu position close to screen border (STR #2057)

CHANGES IN FLTK 1.1.9

	- Improved color contrast in secondary selection blocks